# qgis-tidy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README-git-integration.md  README-qgis-tidy.md  WORKFLOW.md  pyproject.toml  qgis-tidy.py
git_scripts/: qgis_textconv.sh
src/qgis_tidy/: __main__.py
test_projs/: mini.qgs  mini.qgz
xquery_experiment/: apply_rules.xq  set_user.xq
