[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qgis-tidy"
version = "0.1.0"
description = "Normalize QGIS .qgs/.qgz for stable diffs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["lxml"]
# optional: expose YAML support behind an extra
optional-dependencies.yaml = ["PyYAML"]

[project.scripts]
qgis-tidy = "qgis_tidy.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
